# bytewatch-fraud-platform

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/analyst-console/: README.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/analyst-console/app/: error.tsx  globals.css  layout.tsx  loading.tsx
apps/analyst-console/app/cases/: cases-live-shell.tsx  page.test.tsx  page.tsx
apps/analyst-console/app/models/: page.tsx
apps/analyst-console/app/monitoring/: page.tsx
apps/analyst-console/app/overview/: overview-live-shell.tsx  page.test.tsx  page.tsx
apps/analyst-console/components/: activity-feed.tsx  activity-toast-stack.tsx  console-shell.tsx  empty-state.tsx  live-toolbar.tsx  status.tsx
apps/analyst-console/components/ui/: badge.tsx  button.tsx  card.tsx
apps/analyst-console/lib/: api.test.ts  api.ts  browser-api.ts  live-utils.test.ts  live-utils.ts  use-live-resource.ts
apps/api/: README.md
apps/api/src/fraud_platform_api/: __init__.py  main.py  schemas.py
apps/api/tests/: test_api_health.py  test_business_api.py
apps/producer/: README.md
apps/producer/src/fraud_platform_producer/: __init__.py  cli.py  generation.py  main.py  runtime.py
apps/producer/tests/: test_generation.py  test_producer_health.py
apps/stream-worker/: README.md
apps/stream-worker/src/fraud_platform_stream_worker/: __init__.py  flow.py  main.py  (+3 more)
apps/stream-worker/tests/: test_processor.py  test_stream_worker_health.py
apps/trainer/: README.md
apps/trainer/tests/: test_trainer_health.py  test_training_pipeline.py
docs/: demo-script.md  github-profile-kit.md  release-notes-v0.1.0.md  runbook.md  screenshots-checklist.md  troubleshooting.md
docs/adr/: 0001-architecture.md  0002-stack-selection.md
docs/architecture/: overview.md  transaction-lifecycle.md
docs/assets/: github-social-preview.html
infra/docker/analyst-console/: Dockerfile
infra/docker/api/: Dockerfile
infra/docker/mlflow/: Dockerfile
infra/docker/producer/: Dockerfile
infra/docker/stream-worker/: Dockerfile
infra/docker/trainer/: Dockerfile
infra/grafana/dashboards/: drift-monitoring.json  fraud-overview.json  model-performance.json  system-health.json
infra/kafka/: create-topics.sh
infra/postgres/alembic/: env.py
infra/prometheus/: prometheus.yml
libs/contracts/tests/: test_event_contracts.py
libs/feature_store/tests/: test_memory_feature_store.py
libs/model_runtime/tests/: test_runtime.py
libs/persistence/tests/: test_repository_training_frame.py
libs/rules/tests/: test_rule_engine.py
tests/integration/: test_repo_layout.py
(+38 files in other folders)
